# tagvfs

./: .gitignore  README.md  README_RUS.md
doc/: Доработки.txt  Заметки по реализации.txt  Постановка задачи.txt  Структура файлов.txt  Утилиты.txt  Формат хранения.txt  Формат экспорта.txt
tag2json/: CMakeLists.txt  main.cpp  tag_export.cpp  tag_export.h  tag_file.cpp  tag_file.h
tag2json/formats/: tag_file_43235634.cpp  tag_file_43235634.h
tagvfs/: Makefile  common.c  common.h  dentry_info.h  inode_info.h  run_fs  stop_fs  tag_allfiles_dir.c  tag_allfiles_dir.h  tag_dir.c  tag_dir.h  tag_file.c  tag_file.h  tag_fs.c  tag_fs.h  tag_inode.c  tag_inode.h  tag_module.c  tag_onlytags_dir.c  tag_onlytags_dir.h  tag_options.c  tag_options.h  tag_storage.c  tag_storage.h  tag_storage_cache.c  tag_storage_cache.h  tag_tag_dir.c  tag_tag_dir.h  tag_tag_mask.c  tag_tag_mask.h  tagvfs.c  tagvfs.pro
tests/: all_tests.sh  clear.sh  comm_check_exist  comm_wait_umount  comm_wait_umount.sh  common.sh  compile_run.sh  error_clear.sh  gcov_clear.sh  gcov_report.sh  stop.sh  tagvfs_compile_run  tagvfs_stop  test_base_functions  test_base_functions.sh  test_copy  test_copy.sh  test_direct_inode  test_long_names  test_long_names.sh  test_only_files_feature  test_only_tags_feature  test_same_filename_copy  test_same_filename_copy.sh
utils/: tagvfs_grab.sh  tagvfs_lsbroken.sh  tagvfs_rm.sh
